--- a/tex/id.tex
+++ b/tex/id.tex
@@ -3,31 +3,31 @@
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
 %TC:ignore
-\title{上海交通大学学位论文 \\ \LaTeX{} 模板示例文档}
-\author{某\quad{}某}
-\advisor{某某教授}
+\title{面向多路口交通信号灯控制的深度强化学习算法}
+\author{陈诧姹}
+\advisor{张伟楠}
 % \coadvisor{某某教授}
-\defenddate{2014年12月17日}
+\defenddate{2019年6月10日}
 \coursename{某某课程}
 \school{上海交通大学}
-\institute{某某系}
-\studentnumber{0010900990}
-\cnacademicdegree{工学硕士}
-\major{某某专业}
+\institute{电子信息与电气工程学院}
+\studentnumber{515021910302}
+\cnacademicdegree{工学学士}
+\major{计算机科学与技术}
 \keywords{上海交大, 饮水思源, 爱国荣校}
 
-\englishtitle{A Sample Document for \LaTeX-based SJTU Thesis Template}
-\englishauthor{\textsc{Mo Mo}}
-\englishadvisor{Prof. \textsc{Mou Mou}}
+\englishtitle{Deep reinforcement learning for multi-intersection traffic signal control}
+\englishauthor{\textsc{Chacha Chen}}
+\englishadvisor{Prof. \textsc{Weinan Zhang}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
 \englishschool{Shanghai Jiao Tong University}
-\englishinstitute{\textsc{Depart of XXX, School of XXX} \\
+\englishinstitute{\textsc{Depart of Computer Sience and Engineering, School of Electronic Information and Electrical Engineering} \\
   \textsc{Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
-\englishinstitutemaster{Depart of XXX, \\ School of XXX}
+\englishinstitutemaster{Depart of Computer Sience and Engineering, \\ School of Electronic Information and Electrical Engineering}
 \englishmajor{A Very Important Major}
 \englishdate{Dec. 17th, 2014}
-\enacademicdegree{Master of Engineering}
-\englishstudentid{0010900990}
-\englishkeywords{SJTU, master thesis, XeTeX/LaTeX template}
+\enacademicdegree{Bachelor of Engineering}
+\englishstudentid{515021910302}
+\englishkeywords{SJTU, bachelor thesis, XeTeX/LaTeX template}
 %TC:endignore
