--- a/thesis.tex
+++ b/thesis.tex
@@ -4,7 +4,7 @@
 %%==================================================
 
 % 双面打印
-\documentclass[bachelor, openright, twoside]{sjtuthesis}
+\documentclass[bachelor, openright, twoside, english]{sjtuthesis}
 % \documentclass[bachelor, openany, oneside, submit]{sjtuthesis}
 % \documentclass[master, review]{sjtuthesis}
 % \documentclass[%
@@ -12,7 +12,7 @@
 %   fontset=fandol|windows|mac|ubuntu|adobe|founder, % 字体选项
 %   oneside|twoside,        % 单面打印，双面打印(奇偶页交换页边距，默认)
 %   openany|openright,      % 可以在奇数或者偶数页开新章|只在奇数页开新章(默认)
-%   english,                % 启用英文模版
+   % english,                % 启用英文模版
 %   review,     % 盲审论文，隐去作者姓名、学号、导师姓名、致谢、发表论文和参与的项目
 %   submit      % 定稿提交的论文，插入签名扫描版的原创性声明、授权声明
 % ]
@@ -72,17 +72,17 @@
 
 % 正文内容
 \include{tex/intro}
-\include{tex/example}
-\include{tex/faq}
-\include{tex/summary}
+% \include{tex/example}
+% \include{tex/faq}
+% \include{tex/summary}
 
 \appendix % 使用英文字母对附录编号
 
 % 附录内容，本科学位论文可以用翻译的文献替代。
-\include{tex/app_setup}
-\include{tex/app_eq}
-\include{tex/app_cjk}
-\include{tex/app_log}
+% \include{tex/app_setup}
+% \include{tex/app_eq}
+% \include{tex/app_cjk}
+% \include{tex/app_log}
 
 \backmatter % 文后无编号部分
 
