--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -282,4 +282,667 @@
         url = {http://www.R-project.org/},
         Year = {2012},
 }
+@inproceedings{SQAS15,
+  title={Multi-agent reinforcement learning for traffic light control},
+  author={Schaul, Tom and Quan, John and Antonoglou, Ioannis and Silver, David},
+  booktitle={4th International Conference on Learning Representations (ICLR 2016)},
+  year={2016}
+}
+
+@article{MKSR+15,
+  title={Human-level control through deep reinforcement learning},
+  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
+  journal={Nature},
+  volume={518},
+  number={7540},
+  pages={529},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{Guer14,
+  title={Traffic Congestion Costs Americans \$124 Billion A Year, Report Says},
+  author={Guerrini, Federico},
+  journal={Forbes, October},
+  year={2014}
+}
+
+
+@book{Roess2011t,
+  title={Traffic Engineering},
+  author={Roess, Roger P and Prassas, Elena S and Mcshane, William R},
+  publisher={Pearson/Prentice Hall},
+  year={2011},
+}
+
+
+@inproceedings{SQAS15,
+  title={Multi-agent reinforcement learning for traffic light control},
+  author={Schaul, Tom and Quan, John and Antonoglou, Ioannis and Silver, David},
+  booktitle={4th International Conference on Learning Representations (ICLR 2016)},
+  year={2016}
+}
+
+@article{MKSR+15,
+  title={Human-level control through deep reinforcement learning},
+  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
+  journal={Nature},
+  volume={518},
+  number={7540},
+  pages={529},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{Guer14,
+  title={Traffic Congestion Costs Americans \$124 Billion A Year, Report Says},
+  author={Guerrini, Federico},
+  journal={Forbes, October},
+  year={2014}
+}
+
+@article{LMNC12,
+  title={Building a memory palace in minutes: Equivalent memory performance using virtual versus conventional environments with the Method of Loci},
+  author={Legge, Eric LG and Madan, Christopher R and Ng, Enoch T and Caplan, Jeremy B},
+  journal={Acta psychologica},
+  volume={141},
+  number={3},
+  pages={380--390},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{Godw10,
+  title={Emerging technologies},
+  author={Godwin-Jones, Robert},
+  year={2010},
+  publisher={University of Hawaii National Foreign Language Resource Center}
+}
+
+@inproceedings{VaOl16,
+  title={Coordinated Deep Reinforcement Learners for Traffic Light Control},
+  author={van der Pol et al.},
+  year={2016},
+  organization={NIPS}
+}
+
+@incollection{CoGD13,
+  title={Self-organizing traffic lights: A realistic simulation},
+  author={Cools, Seung-Bae and Gershenson, Carlos and D’Hooghe, Bart},
+  booktitle={Advances in applied self-organizing systems},
+  pages={45--55},
+  year={2013},
+  publisher={Springer}
+}
+@article{Mill63,
+  title={Settings for fixed-cycle traffic signals},
+  author={Miller, Alan J},
+  journal={Journal of the Operational Research Society},
+  volume={14},
+  number={4},
+  pages={373--386},
+  year={1963},
+  publisher={Springer}
+}
+@article{Webst58,
+  title={Traffic signal settings},
+  author={Webster, F. V},
+  journal={Road Research Technical Paper},
+  volume={39},
+  year={1958},
+}
+@article{DiRK04,
+  title={Comparison of delay estimates at under-saturated and over-saturated pre-timed signalized intersections},
+  author={Dion, Francois and Rakha, Hesham and Kang, Youn-Soo},
+  journal={Transportation Research Part B: Methodological},
+  volume={38},
+  number={2},
+  pages={99--122},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@phdthesis{Rijk15,
+  title={DeepLight: Deep reinforcement learning for signalised traffic control},
+  author={Rijken, Tobias},
+  year={2015},
+  school={Master’s Thesis. University College London}
+}
+
+@inproceedings{Wier00,
+  title={Multi-agent reinforcement learning for traffic light control},
+  author={Wiering, MA},
+  booktitle={Machine Learning: Proceedings of the Seventeenth International Conference (ICML'2000)},
+  pages={1151--1158},
+  year={2000}
+}
+
+@incollection{BWKG10,
+  title={Traffic light control by multiagent reinforcement learning systems},
+  author={Bakker, Bram and Whiteson, Shimon and Kester, Leon and Groen, Frans CA},
+  booktitle={Interactive Collaborative Information Systems},
+  pages={475--510},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{AbPK03,
+  title={Reinforcement learning for true adaptive traffic signal control},
+  author={Abdulhai, Baher and Pringle, Rob and Karakoulas, Grigoris J},
+  journal={Journal of Transportation Engineering},
+  volume={129},
+  number={3},
+  pages={278--285},
+  year={2003},
+  publisher={American Society of Civil Engineers}
+}
+
+@article{CBKYT11,
+  title={Q-learning based traffic optimization in management of signal timing plan},
+  author={Chin, Yit Kwong and Bolong, Nurmin and Kiring, Aroland and Yang, Soo Siang and Teo, Kenneth Tze Kin},
+  journal={International Journal of Simulation, Systems, Science \& Technology},
+  volume={12},
+  number={3},
+  pages={29--35},
+  year={2011}
+}
+
+@article{AbMB13,
+  title={Holonic multi-agent system for traffic signals control},
+  author={Abdoos, Monireh and Mozayani, Nasser and Bazzan, Ana LC},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={26},
+  number={5},
+  pages={1575--1587},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{ALUK10,
+  title={Reinforcement learning-based multi-agent system for network traffic signal control},
+  author={Arel, Itamar and Liu, Cong and Urbanik, T and Kohls, AG},
+  journal={IET Intelligent Transport Systems},
+  volume={4},
+  number={2},
+  pages={128--135},
+  year={2010},
+  publisher={IET}
+}
+
+@article{ElAA13,
+  title={Multiagent reinforcement learning for integrated network of adaptive traffic signal controllers (MARLIN-ATSC): methodology and large-scale application on downtown Toronto},
+  author={El-Tantawy, Samah and Abdulhai, Baher and Abdelgawad, Hossam},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={14},
+  number={3},
+  pages={1140--1150},
+  year={2013},
+  publisher={IEEE}
+}
+
+@incollection{MaDH16,
+  title={An experimental review of reinforcement learning algorithms for adaptive traffic signal control},
+  author={Mannion, Patrick and Duggan, Jim and Howley, Enda},
+  booktitle={Autonomic Road Transport Support Systems},
+  pages={47--66},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{CaWH09,
+  title = {Adaptive traffic signal control using approximate dynamic programming},
+  volume = {17},
+  issn = {0968090X},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0968090X09000321},
+  doi = {10.1016/j.trc.2009.04.005},
+  language = {en},
+  number = {5},
+  urldate = {2018-01-24},
+  journal = {Transportation Research Part C: Emerging Technologies},
+  author = {Cai, Chen and Wong, Chi Kwong and Heydecker, Benjamin G.},
+  month = oct,
+  year = {2009},
+  pages = {456--474}
+}
+
+@article{KWBV08,
+  title={Multiagent reinforcement learning for urban traffic control using coordination graphs},
+  author={Kuyer, Lior and Whiteson, Shimon and Bakker, Bram and Vlassis, Nikos},
+  journal={Machine learning and knowledge discovery in databases},
+  pages={656--671},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{liLW16,
+  title={Traffic signal timing via deep reinforcement learning},
+  author={Li, Li and Lv, Yisheng and Wang, Fei-Yue},
+  journal={IEEE/CAA Journal of Automatica Sinica},
+  volume={3},
+  number={3},
+  pages={247--254},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{GenR16,
+  title={Using a deep reinforcement learning agent for traffic signal control},
+  author={Genders, Wade and Razavi, Saiedeh},
+  journal={arXiv preprint arXiv:1611.01142},
+  year={2016}
+}
+
+@article{GSLI17,
+  title={Adaptive Traffic Signal Control: Deep Reinforcement Learning Algorithm with Experience Replay and Target Network},
+  author={Gao, Juntao and Shen, Yulong and Liu, Jia and Ito, Minoru and Shiratori, Norio},
+  journal={arXiv preprint arXiv:1705.02755},
+  year={2017}
+}
+
+@article{LDXZ17,
+  title={Cooperative Deep Reinforcement Learning for Tra ic Signal Control},
+  author={Liu, Mengqi and Deng, Jiachuan and Xu, Ming and Zhang, Xianbo and Wang, Wei},
+  year={2017}
+}
+
+@book{RiAn98,
+  title={Reinforcement learning: An introduction},
+  author={Sutton, Richard S and Barto, Andrew G},
+  volume={1},
+  number={1},
+  year={1998},
+  publisher={MIT press Cambridge}
+}
+
+@article{IsSt99,
+  title={Adaptive look-ahead optimization of traffic signals},
+  author={Porche, Isaac and Lafortune, St{\'e}phane},
+  journal={Journal of Intelligent Transportation System},
+  volume={4},
+  number={3-4},
+  pages={209--254},
+  year={1999},
+  publisher={Taylor \& Francis}
+}
+
+@misc{Econ14,
+  title = {The cost of traffic jams},
+  howpublished = {\url{https://www.economist.com/blogs/economist-explains/2014/11/economist-explains-1}},
+   author =       "The Economist",
+   month =        "November",
+   year =         "2014",
+}
+
+@article{VMSK18,
+archivePrefix = {arXiv},
+arxivId = {1804.02477},
+author = {Verma, Abhinav and Murali, Vijayaraghavan and Singh, Rishabh and Kohli, Pushmeet and Chaudhuri, Swarat},
+eprint = {1804.02477},
+title = {{Programmatically Interpretable Reinforcement Learning}},
+url = {http://arxiv.org/abs/1804.02477},
+year = {2018}
+}
+
+@article{HeUR2017,
+archivePrefix = {arXiv},
+arxivId = {1712.04170},
+author = {Hein, Daniel and Udluft, Steffen and Runkler, Thomas A.},
+eprint = {1712.04170},
+keywords = {genetic programming,industrial,interpretable,model-based,reinforcement learning,symbolic regression},
+mendeley-groups = {Reinforcement Learnining},
+title = {{Interpretable Policies for Reinforcement Learning by Genetic Programming}},
+url = {http://arxiv.org/abs/1712.04170},
+year = {2017}
+}
+
+
+@inproceedings{wei2018intellilight,
+  title={IntelliLight: A Reinforcement Learning Approach for Intelligent Traffic Light Control},
+  author={Wei, Hua and Zheng, Guanjie and Yao, Huaxiu and Li, Zhenhui},
+  booktitle={Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  pages={2496--2505},
+  year={2018},
+  organization={ACM}
+}
+
+@article{liu2017cooperative,
+  title={Cooperative Deep Reinforcement Learning for Traffic Signal Control},
+  author={Liu, Mengqi and Deng, Jiachuan and Xu, Ming and Zhang, Xianbo and WANG, Wei},
+  year={2017}
+}
+
+
+
+@book{Gart83,
+  title={OPAC: A demand-responsive strategy for traffic signal control},
+  author={Gartner, Nathan H},
+  number={906},
+  year={1983}
+}
+
+@incollection{Henr84,
+  title={The PRODYN real time traffic algorithm},
+  author={Henry, Jean-Jacques and Farges, Jean Loup and Tuffal, J},
+  booktitle={Control in Transportation Systems},
+  pages={305--310},
+  year={1984},
+  publisher={Elsevier}
+}
+
+@article{Boil06,
+  title={The real-time urban traffic control system CRONOS: Algorithm and experiments},
+  author={Boillot, Florence and Midenet, Sophie and Pierrelee, Jean-Claude},
+  journal={Transportation Research Part C: Emerging Technologies},
+  volume={14},
+  number={1},
+  pages={18--38},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{SeHe97,
+  title={Controlled optimization of phases at an intersection},
+  author={Sen, Suvrajeet and Head, K Larry},
+  journal={Transportation science},
+  volume={31},
+  number={1},
+  pages={5--17},
+  year={1997},
+  publisher={INFORMS}
+}
+
+@article{MSCH17,
+author = {Mousavi, Seyed Sajad and Schukat, Michael and Corcoran, Peter and Howley, Enda},
+journal = {arXiv preprint arXiv:1704.08883},
+title = {{Traffic Light Control Using Deep Policy-Gradient and Value-Function Based Reinforcement Learning}},
+year = {2017}
+}
+
+@article{casas_deep_2017,
+annote = {Axirv, policy-gradient},
+author = {Casas, Noe},
+journal = {arXiv preprint arXiv:1703.09035},
+title = {{Deep Deterministic Policy Gradient for Urban Traffic Light Control}},
+year = {2017}
+}
+
+@article{APK03,
+  title={Reinforcement learning for true adaptive traffic signal control},
+  author={Abdulhai, Baher and Pringle, Rob and Karakoulas, Grigoris J},
+  journal={Journal of Transportation Engineering},
+  volume={129},
+  number={3},
+  pages={278--285},
+  year={2003},
+  publisher={American Society of Civil Engineers}
+}
+
+@article{ElAb10,
+author = {El-Tantawy, Samah and Abdulhai, Baher},
+doi = {10.1109/ITSC.2010.5625066},
+isbn = {9781424476572},
+issn = {2153-0009},
+journal = {IEEE Conference on Intelligent Transportation Systems, Proceedings, ITSC},
+mendeley-groups = {paper/traffic},
+pages = {665--670},
+title = {{An agent-based learning towards decentralized and coordinated traffic signal control}},
+year = {2010}
+}
+
+@article{girault2016exploratory,
+  title={Exploratory analysis of signal coordination impacts on macroscopic fundamental diagram},
+  author={Girault, Jan-Torben and Gayah, Vikash V and Guler, Ilgin and Menendez, Monica},
+  journal={Transportation Research Record: Journal of the Transportation Research Board},
+  number={2560},
+  pages={36--46},
+  year={2016},
+  publisher={Transportation Research Board of the National Academies}
+}
+
+@inproceedings{newell1981blocking,
+  title={Blocking effects for synchronized signals},
+  author={Newell, GF},
+  booktitle={Proc., 8th International Symp. on Transportation and Traffic Theory, University of Toronto Press, Toronto, Canada},
+  year={1981}
+}
+
+@inproceedings{vlassis2004anytime,
+  title={Anytime algorithms for multiagent decision making using coordination graphs},
+  author={Vlassis, Nikos and Elhorst, Reinoud and Kok, Jelle R},
+  booktitle={Proceedings of the International Conference on Systems, Man and Cybernetics},
+  pages={953--957},
+  year={2004},
+  organization={Institute of Electronics Engineers}
+}
+
+@article{taylor2009transfer,
+  title={Transfer learning for reinforcement learning domains: A survey},
+  author={Taylor, Matthew E and Stone, Peter},
+  journal={Journal of Machine Learning Research},
+  volume={10},
+  number={Jul},
+  pages={1633--1685},
+  year={2009}
+}
+
+@inproceedings{oliehoek2013approximate,
+  title={Approximate solutions for factored Dec-POMDPs with many agents},
+  author={Oliehoek, Frans A and Whiteson, Shimon and Spaan, Matthijs TJ},
+  booktitle={Proceedings of the 2013 international conference on Autonomous agents and multi-agent systems},
+  pages={563--570},
+  year={2013},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
+}
+
+
+@book{urbanik2015signal,
+  title={Signal timing manual},
+  author={Urbanik, Thomas and Tanaka, Alison and Lozner, Bailey and Lindstrom, Eric and Lee, Kevin and Quayle, Shaun and Beaird, Scott and Tsoi, Shing and Ryus, Paul and Gettman, Doug and others},
+  year={2015},
+  publisher={Transportation Research Board}
+}
+
+@article{robertson1969transyt,
+  title={TRANSYT: a traffic network study tool},
+  author={Robertson, Dennis I},
+  year={1969}
+}
+
+@article{little1981maxband,
+  title={MAXBAND: A versatile program for setting signals on arteries and triangular networks},
+  author={Little, John DC and Kelson, Mark D and Gartner, Nathan H},
+  year={1981},
+  publisher={Alfred P. Sloan School of Management, Massachusetts Institute of Technology}
+}
+
+@article{kergaye2010comparative,
+  title={Comparative evaluation of adaptive traffic control system assessments through field and microsimulation},
+  author={Kergaye, Cameron and Stevanovic, Aleksandar and Martin, Peter T},
+  journal={Journal of Intelligent Transportation Systems},
+  volume={14},
+  number={2},
+  pages={109--124},
+  year={2010},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{yang2005intelligent,
+  title={Intelligent cooperation control of urban traffic networks},
+  author={Yang, Zhao-sheng and Chen, Xin and Tang, Yang-shan and Sun, Jian-ping},
+  booktitle={Machine Learning and Cybernetics, 2005. Proceedings of 2005 International Conference on},
+  volume={3},
+  pages={1482--1486},
+  year={2005},
+  organization={IEEE}
+}
+
+@inproceedings{france2003multiagent,
+  title={A multiagent system for optimizing urban traffic},
+  author={France, John and Ghorbani, Ali A},
+  booktitle={null},
+  pages={411},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{da2006adaptive,
+  title={Adaptive traffic control with reinforcement learning},
+  author={da Silva, ALCB Bruno Castro and de Oliveria, Denise and Basso, EW},
+  booktitle={Conference on Autonomous Agents and Multiagent Systems (AAMAS)},
+  pages={80--86},
+  year={2006}
+}
+
+@book{poundstone1993prisoner,
+  title={Prisoner's Dilemma/John von Neumann, Game Theory and the Puzzle of the Bomb},
+  author={Poundstone, William},
+  year={1993},
+  publisher={Anchor}
+}
+
+@article{brockfeld2001optimizing,
+  title={Optimizing traffic lights in a cellular automaton model for city traffic},
+  author={Brockfeld, Elmar and Barlovic, Robert and Schadschneider, Andreas and Schreckenberg, Michael},
+  journal={Physical Review E},
+  volume={64},
+  number={5},
+  pages={056132},
+  year={2001},
+  publisher={APS}
+}
+
+@article{shannon2001mathematical,
+  title={A mathematical theory of communication},
+  author={Shannon, Claude Elwood},
+  journal={ACM SIGMOBILE mobile computing and communications review},
+  volume={5},
+  number={1},
+  pages={3--55},
+  year={2001},
+  publisher={ACM}
+}
+
+@article{chen2017cooperative,
+  title={Cooperative traffic control with green wave coordination for multiple intersections based on the internet of vehicles},
+  author={Chen, Lien-Wu and Chang, Chia-Chen},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics: Systems},
+  volume={47},
+  number={7},
+  pages={1321--1335},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{bernstein2002complexity,
+  title={The complexity of decentralized control of Markov decision processes},
+  author={Bernstein, Daniel S and Givan, Robert and Immerman, Neil and Zilberstein, Shlomo},
+  journal={Mathematics of operations research},
+  volume={27},
+  number={4},
+  pages={819--840},
+  year={2002},
+  publisher={INFORMS}
+}
+
+@article{varaiya2013max,
+  title={Max pressure control of a network of signalized intersections},
+  author={Varaiya, Pravin},
+  journal={Transportation Research Part C: Emerging Technologies},
+  volume={36},
+  pages={177--195},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{MP13,
+  title={Max pressure control of a network of signalized intersections},
+  author={Varaiya, Pravin},
+  journal={Transportation Research Part C: Emerging Technologies},
+  volume={36},
+  pages={177--195},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@book{MP13book,
+author = {Varaiya, Pravin},
+doi = {10.1007/978-1-4614-6243-9},
+isbn = {978-1-4614-6242-2},
+title = {{The Max-Pressure Controller for Arbitrary Networks of Signalized Intersections}},
+volume = {2},
+year = {2013}
+}
+
+@article{MP13-adaptvie,
+  title={Adaptive Max Pressure Control of Network of Signalized Intersections},
+  author={Lioris, Jennie and Kurzhanskiy, Alex and Varaiya, Pravin},
+  journal={Transportation Research Part C},
+  volume={36},
+  number={22},
+  pages={177-195},
+  year={2013},
+}
+
+@article{Casa17PG,
+annote = {Axirv, policy-gradient},
+author = {Casas, Noe},
+journal = {arXiv preprint arXiv:1703.09035},
+title = {{Deep Deterministic Policy Gradient for Urban Traffic Light Control}},
+year = {2017}
+}
+
+@article{AsMW17AC,
+  title={Adaptive traffic signal control with actor-critic methods in a real-world traffic network with different traffic disruption events},
+  author={Aslani, Mohammad and Mesgari, Mohammad Saadi and Wiering, Marco},
+  journal={Transportation Research Part C Emerging Technologies},
+  volume={85},
+  pages={732-752},
+  year={2017},
+}
+
+@article{BPT14,
+  title={Distributed learning and multi-objectivity in traffic light control},
+  author={Brys, Tim and Pham, Tong T and Taylor, Matthew E},
+  journal={Connection Science},
+  volume={26},
+  number={1},
+  pages={65--83},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{PraB11,
+author = {Prashanth, L A and Bhatnagar, Shalabh},
+doi = {10.1109/ITSC.2011.6082823},
+isbn = {978-1-4577-2197-7},
+issn = {2153-0009},
+journal = {2011 14th International IEEE Conference on Intelligent Transportation Systems (ITSC)},
+pages = {1640--1645},
+title = {{Reinforcement learning with average cost for adaptive control of traffic lights at intersections}},
+year = {2011}
+}
+
+@article{BSSN+05,
+  title={Cooperative multi-agent reinforcement learning of traffic lights},
+  author={Bakker, Bram and Steingrover, M and Schouten, Roelant and Nijhuis, EHJ and Kester, LJHM and others},
+  year={2005}
+}
+
+
+@inproceedings{PBTB+13,
+  title={Learning coordinated traffic light control},
+  author={Pham, Tong Thanh and Brys, Tim and Taylor, Matthew E and Brys, Tim and Drugan, Madalina M and Bosman, PA and Cock, Martine-De and Lazar, Cosmin and Demarchi, L and Steenhoff, David and others},
+  booktitle={Proceedings of the Adaptive and Learning Agents workshop (at AAMAS-13)},
+  volume={10},
+  pages={1196--1201},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{Liang18,
+  title={Deep reinforcement learning for traffic light control in vehicular networks},
+  author={Liang, Xiaoyuan and Du, Xunsheng and Wang, Guiling and Han, Zhu},
+  journal={arXiv preprint arXiv:1803.11115},
+  year={2018}
+}
 
