--- a/tex/id.tex
+++ b/tex/id.tex
@@ -14,7 +14,7 @@
 \studentnumber{515021910302}
 \cnacademicdegree{工学学士}
 \major{计算机科学与技术}
-\keywords{上海交大, 饮水思源, 爱国荣校}
+\keywords{数据挖掘，强化学习，信号灯控制，多智能体系统}
 
 \englishtitle{Deep reinforcement learning for multi-intersection traffic signal control}
 \englishauthor{\textsc{Chacha Chen}}
@@ -25,9 +25,9 @@
   \textsc{Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
 \englishinstitutemaster{Depart of Computer Sience and Engineering, \\ School of Electronic Information and Electrical Engineering}
-\englishmajor{A Very Important Major}
-\englishdate{Dec. 17th, 2014}
+\englishmajor{Computer Sience and Engineering}
+\englishdate{June 6th, 2019}
 \enacademicdegree{Bachelor of Engineering}
 \englishstudentid{515021910302}
-\englishkeywords{SJTU, bachelor thesis, XeTeX/LaTeX template}
+\englishkeywords{Data mining, Deep reinforcement learning, traffic signal control, multi-agent system}
 %TC:endignore
