--- a/tex/id.tex
+++ b/tex/id.tex
@@ -29,5 +29,5 @@
 \englishdate{June 6th, 2019}
 \enacademicdegree{Bachelor of Engineering}
 \englishstudentid{515021910302}
-\englishkeywords{Data mining, Deep reinforcement learning, traffic signal control, multi-agent system}
+\englishkeywords{Data mining, deep reinforcement learning, traffic signal control, multi-agent system}
 %TC:endignore
