--- a/thesis.tex
+++ b/thesis.tex
@@ -179,6 +179,14 @@
 
 % 正文内容
 \include{tex/intro}
+\include{tex/relatedwork}
+% \input{introduction}
+% \input{relatedwork}
+\input{tex/presslight}
+% \input{tex/method}
+% \input{tex/experiment}
+% \input{tex/conclusion}
+\include
 % \include{tex/example}
 % \include{tex/faq}
 % \include{tex/summary}
