--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -16,5 +16,7 @@ Traffic signal control is essential for transportation efficiency in the road ne
 
 To avoid heuristic design of RL for traffic signal control, we are the first to connect RL with recent studies in transportation research. Our method is inspired by the state-of-the-art method max pressure (MP) in the transportation field. The reward design of our method is well supported by the theory in MP, which can be proved to be maximizing the throughput of the traffic network, i.e., minimizing the overall network travel time. We also justify the concise state representation which can fully support the optimization of the proposed reward function. Through comprehensive experiments, we demonstrate that our method can outperform both conventional transportation approaches and existing learning-based methods.
 
+Traffic congestion plagues cities around the world. Recent years have witnessed an unprecedented trend on applying reinforcement learning for traffic signal control, both on individual level or region level. However, the utmost challenge is to control and coordinate traffic lights in large-scale two-dimensional urban networks. No one has ever tested RL models on a large-scale network of more than a thousand traffic lights. In this paper, we tackle the problem of multi-intersection traffic light control, especially for large-scale networks, based on RL techniques and traditional transportation theories. This problem is quite challenging because:(1) It is hard to theoretically justify the design of RL-based models in solving the multi-intersection control problem; (2) The action and state space would be increasing exponentially due to the curse of dimensionality for coordinated traffic light control approaches. To address these two challenges, we, (1) design and justify our RL agents using Max Pressure control theory and interpret the policy learned by Macroscopic Fundamental Diagrams from transportation field; (2) show that implicit coordination could be achieved by individual control agents with well-crafted reward design thus reducing the dimensionality; and (3) conduct extensive experiments on multiple scenarios, including a real-world scenario with 2510 traffic lights in Manhattan, New York City.
+
 \end{englishabstract}
 
