--- a/thesis.tex
+++ b/thesis.tex
@@ -186,7 +186,7 @@
 % \input{tex/method}
 % \input{tex/experiment}
 % \input{tex/conclusion}
-\include
+% \include
 % \include{tex/example}
 % \include{tex/faq}
 % \include{tex/summary}
