--- a/tex/ack.tex
+++ b/tex/ack.tex
@@ -4,18 +4,7 @@
 % !TEX encoding = UTF-8 Unicode
 %TC:ignore
 \begin{thanks}
-
-  感谢所有测试和使用交大学位论文 \LaTeX 模板的同学！
-
-  感谢那位最先制作出博士学位论文 \LaTeX 模板的交大物理系同学！
-
-  感谢William Wang同学对模板移植做出的巨大贡献！
-
-  感谢 \href{https://github.com/weijianwen}{@weijianwen} 学长一直以来的开发和维护工作！
-
-  感谢 \href{https://github.com/sjtug}{@sjtug} 以及 \href{https://github.com/dyweb}{@dyweb} 对 0.9.5 之后版本的开发和维护工作！
-
-  感谢所有为模板贡献过代码的同学们, 以及所有测试和使用模板的各位同学！
+I must express my very profound gratitude to my co-workers and advisors for providing me with unfailing support and continuous encouragement throughout my years of study and through the process of researching and writing this thesis.
 
 \end{thanks}
 %TC:endignore
