--- a/thesis.tex
+++ b/thesis.tex
@@ -181,9 +181,9 @@
 \include{tex/intro}
 \include{tex/relatedwork}
 % \input{introduction}
-% \input{relatedwork}
+\input{tex/arterial}
 \input{tex/presslight}
-% \input{tex/method}
+\input{tex/thousand}
 % \input{tex/experiment}
 % \input{tex/conclusion}
 % \include
