Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -51,7 +51,7 @@
 
 \newcommand{\nop}[1]{}
 \newcommand{\Todo}{{\textbf{\color{red}{todo-}}}}
-
+\newtheorem{definition}{Definition}
 % general terms for methods
 \newcommand{\deepQLearning}{Deep Q-Learning\xspace}
 \newcommand{\deepQNetwork}{Deep Q-Network\xspace}
